--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ pin-project-lite = "0.2"
 
 # subxt
 scale-value = "0.14.1"
-subxt = { version = "0.35.1", features = ["substrate-compat"] }
+subxt = { git = "https://github.com/paritytech/subxt", branch = "jsdw-binaryheap-keyedvec", features = ["substrate-compat"] }
 
 # polkadot-sdk
 frame-election-provider-support = "31.0.0"
