--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,6 +102,25 @@ jobs:
           ${{ env.RUST_INFO }}
           cargo hack check --workspace --each-feature --all-targets
 
+  check-staking-miner-playground:
+    name: Check staking-miner-playground
+    runs-on: ubuntu-latest
+    needs: [set-image]
+    container: ${{ needs.set-image.outputs.IMAGE }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Cache Rust dependencies
+        uses: swatinem/rust-cache@v2
+        with:
+          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Check staking-miner-playground
+        run: |
+          ${{ env.RUST_INFO }}
+          cargo check --manifest-path staking-miner-playground/Cargo.toml
+
   test:
     name: Run tests
     runs-on: ubuntu-latest
