--- a/.github/workflows/build-staking-miner-playground-for-nightly.yml
+++ b/.github/workflows/build-staking-miner-playground-for-nightly.yml
@@ -9,9 +9,9 @@ on:
       - 'staking-miner-playground/**'
   # Allow it to be manually ran to rebuild binary when needed:
   workflow_dispatch: {}
-  # Run at 22pm every week on Sunday's for nightly builds.
+  # Run at 22pm every week on Mondays for nightly builds.
   schedule:
-    - cron: "0 22 1 * *"
+    - cron: "0 22 * * 1"
 
 jobs:
   tests:
