--- a/.github/workflows/build-staking-miner-playground-for-nightly.yml
+++ b/.github/workflows/build-staking-miner-playground-for-nightly.yml
@@ -17,7 +17,7 @@ jobs:
   tests:
     name: Build staking-miner-playground
     runs-on: ubuntu-latest
-    container: paritytech/ci-unified:bullseye-1.77.0-2024-04-10-v20240408
+    container: paritytech/ci-unified:bullseye-1.81.0-2024-09-11
     steps:
       - name: checkout
         uses: actions/checkout@v4
