--- a/.github/workflows/staking-miner-playground.yml
+++ b/.github/workflows/staking-miner-playground.yml
@@ -8,7 +8,7 @@ on:
       - 'staking-miner-playground/**'
 
 env:
-  IMAGE: paritytech/ci-unified:bullseye-1.77.0-2024-04-10-v20240408
+  IMAGE: paritytech/ci-unified:bullseye-1.81.0-2024-09-11
   IMAGE_NAME: paritytech/polkadot-staking-miner
   RUST_INFO: rustup show && cargo --version && rustup +nightly show && cargo +nightly --version
 
