--- a/multi-block/Cargo.toml
+++ b/multi-block/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+codec = { package = "parity-scale-codec", version = "3.0.0" }
 thiserror = "1.0"
 tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "signal"] }
 clap = { version = "4.5", features = ["derive", "env"] }
