--- a/multi-block/Cargo.toml
+++ b/multi-block/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.0.0" }
+scale-info = { package = "scale-info", version = "2.11.2" }
 thiserror = "1.0"
 tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "signal"] }
 clap = { version = "4.5", features = ["derive", "env"] }
