--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,7 +147,7 @@ jobs:
         run: mv ./target/release/polkadot-staking-miner .
 
       - name: Collect artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
           path: |
@@ -158,18 +158,13 @@ jobs:
     name: Test Docker image build
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
-    needs: [check-fmt,
-            check-clippy,
-            check-docs,
-            check-cargo-hack,
-            test,
-            build]
+    needs: [check-fmt, check-clippy, check-docs, check-cargo-hack, test, build]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: build-artifacts
           path: ./artifacts
@@ -197,18 +192,13 @@ jobs:
     if: ${{ github.ref == 'refs/heads/main' ||  github.ref_type == 'tag' }}
     runs-on: ubuntu-latest
     environment: main_and_tags
-    needs: [check-fmt,
-            check-clippy,
-            check-docs,
-            check-cargo-hack,
-            test,
-            build]
+    needs: [check-fmt, check-clippy, check-docs, check-cargo-hack, test, build]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: build-artifacts
           path: ./artifacts
